# instinct

./: .gitignore  LICENSE  Makefile  README.md  Setup.lhs  instinct.cabal
test/: Bench.hs  Props.hs
